--- a/src/cssDemos/swords/style/index.css
+++ b/src/cssDemos/swords/style/index.css
@@ -23,13 +23,47 @@
     animation: sword-one 1s linear infinite;
 }
 
+.swords span:nth-child(2){
+    left: 0;
+    top: 0;
+    border-bottom: 3px solid #fff;
+    animation: sword-two 1s linear infinite;
+}
+
+.swords span:last-child{
+    left: 0;
+    top: 0;
+    border-bottom: 3px solid #fff;
+    animation: sword-three 1s linear infinite;
+}
+
 @keyframes sword-one {
     0%{
-        transform: rotateX(-35deg) rotateY(45deg)  rotateZ(0deg);
+        transform: rotateX(70deg) rotateY(135deg)  rotateZ(0deg);
     }
 
     100%{
-        transform:rotateX(-35deg) rotateY(45deg) rotateZ(360deg);
+        transform:rotateX(70deg) rotateY(135deg) rotateZ(360deg);
+    }
+}
+
+@keyframes sword-two {
+    0%{
+        transform: rotateX(35deg) rotateY(75deg)  rotateZ(0deg);
+    }
+
+    100%{
+        transform:rotateX(35deg) rotateY(75deg) rotateZ(360deg);
+    }
+}
+
+@keyframes sword-three {
+    0%{
+        transform: rotateX(100deg) rotateY(45deg)  rotateZ(0deg);
+    }
+
+    100%{
+        transform:rotateX(100deg) rotateY(45deg) rotateZ(360deg);
     }
 }
 
