--- a/src/cssDemos/swords/style/index.css
+++ b/src/cssDemos/swords/style/index.css
@@ -1,69 +1,69 @@
-.swords{
-    position: relative;
-    width: 100px;
-    height: 100px;
-    top: 50%;
-    left: 50%;
-    transform: translateX(50%) translateY(50%);
-    border-radius: 50%;
+.swords {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  top: 50%;
+  left: 50%;
+  transform: translateX(50%) translateY(50%);
+  border-radius: 50%;
+  background-color: bisque;
 }
 
-.swords span{
-    position: absolute;
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;  
-  }
-
-.swords span:first-child{
-    left: 0;
-    top: 0;
-    border-bottom: 3px solid #fff;
-    animation: sword-one 1s linear infinite;
+.swords span {
+  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
 
-.swords span:nth-child(2){
-    left: 0;
-    top: 0;
-    border-bottom: 3px solid #fff;
-    animation: sword-two 1s linear infinite;
+.swords span:first-child {
+  left: 0;
+  top: 0;
+  border-bottom: 3px solid #fff;
+  animation: sword-one 1s linear infinite;
 }
 
-.swords span:last-child{
-    left: 0;
-    top: 0;
-    border-bottom: 3px solid #fff;
-    animation: sword-three 1s linear infinite;
+.swords span:nth-child(2) {
+  left: 0;
+  top: 0;
+  border-bottom: 3px solid #fff;
+  animation: sword-two 1s linear infinite;
+}
+
+.swords span:last-child {
+  left: 0;
+  top: 0;
+  border-bottom: 3px solid #fff;
+  animation: sword-three 1s linear infinite;
 }
 
 @keyframes sword-one {
-    0%{
-        transform: rotateX(70deg) rotateY(135deg)  rotateZ(0deg);
-    }
+  0% {
+    transform: rotateX(70deg) rotateY(135deg) rotateZ(0deg);
+  }
 
-    100%{
-        transform:rotateX(70deg) rotateY(135deg) rotateZ(360deg);
-    }
+  100% {
+    transform: rotateX(70deg) rotateY(135deg) rotateZ(360deg);
+  }
 }
 
 @keyframes sword-two {
-    0%{
-        transform: rotateX(35deg) rotateY(75deg)  rotateZ(0deg);
-    }
+  0% {
+    transform: rotateX(35deg) rotateY(75deg) rotateZ(0deg);
+  }
 
-    100%{
-        transform:rotateX(35deg) rotateY(75deg) rotateZ(360deg);
-    }
+  100% {
+    transform: rotateX(35deg) rotateY(75deg) rotateZ(360deg);
+  }
 }
 
 @keyframes sword-three {
-    0%{
-        transform: rotateX(100deg) rotateY(45deg)  rotateZ(0deg);
-    }
+  0% {
+    transform: rotateX(100deg) rotateY(45deg) rotateZ(0deg);
+  }
 
-    100%{
-        transform:rotateX(100deg) rotateY(45deg) rotateZ(360deg);
-    }
+  100% {
+    transform: rotateX(100deg) rotateY(45deg) rotateZ(360deg);
+  }
 }
-
