老虎机效果停止说明增加

--- a/src/cssDemos/slot/style/index.css
+++ b/src/cssDemos/slot/style/index.css
@@ -22,7 +22,7 @@
   width: 100%;
   height: 1100%;
   list-style-type: none;
-  animation: move 0.3s linear infinite,
+  animation: move .3s linear infinite,
     bounce-in-down 1s calc(var(--delay) * 1s) forwards;
 }
 
@@ -43,6 +43,7 @@
 }
 
 @keyframes bounce-in-down {
+  /* 起始从上面开始弹起 */
   from {
     transform: translateY(calc(var(--i) * -9.09% - 7%));
     filter: none;
